--- a/projects.json
+++ b/projects.json
@@ -287,6 +287,7 @@
             "repo": "https://github.com/microsoft/PlistCpp.git",
             "commit": "cdeabc4c68a50897dd26fe7f4f409b58b23775d6"
         },
+        "cmake generators" : [ "2017-x64" ],
         "project to check": [
             "PlistCpp",
             "NSPlist"
